--- a/styles.css
+++ b/styles.css
@@ -3,66 +3,66 @@ html {
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  color: #fff
+  color: #fff;
+  font-family: "Roboto Mono", monospace;
+  font-size: 18px;
 }
 
 .main {
-  background: url('/Bg.svg');
+  background: url("/Bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
   width: 100%;
   height: 100vh;
 }
-.contain{
+.contain {
   width: 80%;
-  display: inline-flex;
-  justify-content: space-between
+  height: 100vh;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
 }
-.logo object{
+.logo object {
   width: 100%;
 }
-.logo{
-  width: 20em;
+.logo {
+  width: 30%;
+  align-self: center;
 }
 
 /* Shapes Styles */
 /* Shapes Styles */
 /* Shapes Styles */
-
-
+.shapes-text {
+  align-self: center;
+  width: 70%;
+  padding-left: 100px;
+}
 .shapes {
-  left:150px;
   position: relative;
-  width: 20em;
+  width: 100%;
   display: grid;
   grid-template-columns: auto auto auto auto;
-  justify-content: center;
+  justify-content: start;
   align-content: center;
   grid-gap: 30px 20px;
 }
-.hexagon-circle {
+.hexagon {
   width: 25px;
   height: 30px;
-  left: 12.5px;
   background: #fff;
   position: relative;
-  animation: hexagon-to-orange 2.5s 0s infinite
-    ease-in-out alternate-reverse;
 }
-.circle{
+.circle {
   background: #fff;
-  left:0;
+  left: 0;
   width: 30px;
-height: 30px;
+  height: 30px;
   border-radius: 50%;
-  /* animation: hexagon-to-orange 2.5s 0s infinite
-    ease-in-out alternate; */
 }
 
-
-
-.hexagon-circle:before {
+.hexagon:before {
   content: "";
   position: absolute;
   top: 0;
@@ -72,10 +72,8 @@ height: 30px;
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
   border-right: 5px solid #fff;
-  animation: hexagon-to-orange_before 2.5s 0s infinite
-    ease-in-out alternate-reverse
 }
-.hexagon-circle:after {
+.hexagon:after {
   content: "";
   position: absolute;
   top: 0;
@@ -85,100 +83,63 @@ height: 30px;
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
   border-left: 5px solid #fff;
-  animation: hexagon-to-orange_after 2.5s 0s infinite
-    ease-in-out alternate-reverse;
 }
-/* #circle:before{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -5px;
-  width: 0;
-  height: 0;
-  border-top: 15px solid transparent;
-  border-bottom: 15px solid transparent;
-  border-right: 5px solid #fff;
-  animation: hexagon-to-orange_before 2.5s 0s infinite
-    ease-in-out alternate;
-}
-#circle:after{
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -5px;
-  width: 0;
-  height: 0;
-  border-top: 15px solid transparent;
-  border-bottom: 15px solid transparent;
-  border-left: 5px solid #fff;
-  animation: hexagon-to-orange_after 2.5s 0s infinite
-    ease-in-out alternate;
-} */
-.triangle-square {
+.triangle {
   width: 0;
   height: 0;
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
   border-bottom: 30px solid #fff;
-  animation: triangle-to-orange 2.5s 0s infinite
-    ease-in-out alternate-reverse;
 }
-#square{
-  animation: triangle-to-orange 2.5s 0s infinite
-    ease-in-out alternate;
-/* }
-
-@keyframes triangle-to-orange {
-  0% {
-    width: 30px;
+.square {
+  width: 30px;
   height: 30px;
-   border-top: 0px solid #fff;
-   border-left: 0px solid #fff;
-  border-right: 0px solid #fff;
-  border-bottom: 0px solid #fff;
-    background:  #fff;
-  }
+  background: #fff;
 }
-@keyframes hexagon-to-orange {
-  0% {
-    left:0;
-    width: 0px;
-  height: 0px;
-    border-radius: 50%;
-  }
-}
-@keyframes hexagon-to-orange_before {
-  0% {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-top: 0px solid transparent;
-    border-bottom: 0px solid transparent;
-    border-right: 0px solid transparent;
-  }
-}
-@keyframes hexagon-to-orange_after {
-  0% {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    border-top: 0px solid transparent;
-    border-bottom: 0px solid transparent;
-    border-left: 0px solid transparent;
-  }
+.text {
+  margin-top: 30px;
+  font-size: 1em;
 }
 
-@keyframes square-to-orange {
-  0% {
-    border-left: 45px solid transparent;
-  border-right: 45px solid transparent;
-  border-top: 0px solid #ff513a00;
-  border-bottom: 90px solid #fff;
+@media screen and (max-width: 1024px) {
+  .contain {
+    width: 75%;
   }
-} */
+  .shapes-text {
+    padding-left: 60px;
+  }
+  .text {
+    font-size: 0.8em;
+  }
+}
+@media screen and (max-width: 768px) {
+  .main {
+    background: url("/BG-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+    width: 100%;
+    height: 100vh;
+  }
+  .logo {
+    order: 1;
+    width: 60%;
+  }
+  .shapes-text {
+    order: 2;
+  }
+  .contain {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    justify-content: space-around
+  }
+  .text{
+    order:1
+  }
+  .shapes{
+    order:2
+  }
+}
